--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/api/auth/creation
 
 DATABASE_URL="postgres://postgres.mvqxbokxwtxywgeiuqap:TcpHtyt14ZsoZkF3@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1" # Set this to the Transaction connection pooler string you copied in Step 1
 DIRECT_URL="postgres://postgres.mvqxbokxwtxywgeiuqap:TcpHtyt14ZsoZkF3@aws-0-us-west-1.pooler.supabase.com:5432/postgres"  # Set this to the Session connection pooler string you copied in Step 1
+
+SUPABASE_URL = 
+SUPABASE_ANON_KEY =
